apps/ingress-nginx/patch.yaml
# Source: ingress-nginx/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
#  labels:
#    helm.sh/chart: ingress-nginx-2.0.0
#    app.kubernetes.io/name: ingress-nginx
#    app.kubernetes.io/instance: ingress-nginx
#    app.kubernetes.io/version: 0.30.0
#    app.kubernetes.io/managed-by: Helm
#    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
#  selector:
#    matchLabels:
#      app.kubernetes.io/name: ingress-nginx
#      app.kubernetes.io/instance: ingress-nginx
#      app.kubernetes.io/component: controller
#  revisionHistoryLimit: 10
#  minReadySeconds: 0
  template:
#    metadata:
#      labels:
#        app.kubernetes.io/name: ingress-nginx
#        app.kubernetes.io/instance: ingress-nginx
#        app.kubernetes.io/component: controller
    spec:
#      dnsPolicy: ClusterFirst
      containers:
        - name: controller
#          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.30.0
#          imagePullPolicy: IfNotPresent
#          lifecycle:
#            preStop:
#              exec:
#                command:
#                  - /wait-shutdown
          args:
            - /nginx-ingress-controller
            - --election-id=ingress-controller-leader
            - --ingress-class=nginx
            - --configmap=ingress-nginx/ingress-nginx-controller
            - --validating-webhook=:8443
            - --validating-webhook-certificate=/usr/local/certificates/cert
            - --validating-webhook-key=/usr/local/certificates/key
            - --enable-ssl-passthrough
#          securityContext:
#            capabilities:
#              drop:
#                - ALL
#              add:
#                - NET_BIND_SERVICE
#            runAsUser: 101
#            allowPrivilegeEscalation: true
#          env:
#            - name: POD_NAME
#              valueFrom:
#                fieldRef:
#                  fieldPath: metadata.name
#            - name: POD_NAMESPACE
#              valueFrom:
#                fieldRef:
#                  fieldPath: metadata.namespace
#          livenessProbe:
#            httpGet:
#              path: /healthz
#              port: 10254
#              scheme: HTTP
#            initialDelaySeconds: 10
#            periodSeconds: 10
#            timeoutSeconds: 1
#            successThreshold: 1
#            failureThreshold: 3
#          readinessProbe:
#            httpGet:
#              path: /healthz
#              port: 10254
#              scheme: HTTP
#            initialDelaySeconds: 10
#            periodSeconds: 10
#            timeoutSeconds: 1
#            successThreshold: 1
#            failureThreshold: 3
#          ports:
#            - name: http
#              containerPort: 80
#              protocol: TCP
#            - name: https
#              containerPort: 443
#              protocol: TCP
#            - name: webhook
#              containerPort: 8443
#              protocol: TCP
#          volumeMounts:
#            - name: webhook-cert
#              mountPath: /usr/local/certificates/
#              readOnly: true
#          resources:
#            requests:
#              cpu: 100m
#              memory: 90Mi
#      serviceAccountName: ingress-nginx
#      terminationGracePeriodSeconds: 300
#      volumes:
#        - name: webhook-cert
#          secret:
#            secretName: ingress-nginx-admission
